--- a/main.html
+++ b/main.html
@@ -36,6 +36,39 @@
 
 <script>
 //Your code goes here 
+	 const items = document.querySelector('.items');
+  let isDown = false;
+  let startX;
+  let scrollLeft;
+
+  // When the user clicks down on the items container
+  items.addEventListener('mousedown', (e) => {
+    isDown = true;
+    items.classList.add('active'); // Adds the grabbing class
+    startX = e.pageX - items.offsetLeft; // Get the starting X position
+    scrollLeft = items.scrollLeft; // Get the current scroll position
+  });
+
+  // When the user moves the mouse
+  items.addEventListener('mousemove', (e) => {
+    if (!isDown) return; // Stop the function from running if the mouse isn't clicked
+    e.preventDefault();
+    const x = e.pageX - items.offsetLeft; // Calculate how far the mouse has moved
+    const walk = (x - startX) * 2; // The scroll speed (2x faster)
+    items.scrollLeft = scrollLeft - walk; // Set the new scroll position
+  });
+
+  // When the user releases the mouse
+  items.addEventListener('mouseup', () => {
+    isDown = false;
+    items.classList.remove('active'); // Remove the grabbing class
+  });
+
+  // When the user leaves the items container (to handle cases where mouse moves outside)
+  items.addEventListener('mouseleave', () => {
+    isDown = false;
+    items.classList.remove('active'); // Remove the grabbing class
+  });
 </script>
 
   </body>
